# BioData

./: .gitignore  CMakeLists.txt  Heart.cpp  Heart.h  Hip.h  Lop.h  MinMax.h  README.md  Respiration.cpp  Respiration.h  SkinConductance.cpp  SkinConductance.h  Threshold.h  addon.json  keywords.txt  library.json  library.properties  platformio.ini
.pio/libdeps/teensy31/Chrono/: .piopm
.pio/libdeps/teensy31/CircularBuffer/: .piopm
examples/Heart/: Heart.ino
examples/HeartAvgBPM/: HeartAvgBPM.ino
examples/Respiration/: Respiration.ino
examples/RespirationExternalADC/: RespirationExternalADC.ino
examples/SkinConductance/: SkinConductance.ino
extras/: CMakeLists.txt  PeakDetector.cpp  PeakDetector.h  utils.cpp  utils.h
extras/sensors/respiration/: README.md
src/: Average.h  BioData.h  ExternalADC.cpp  ExternalADC.h  Heart.cpp  Heart.h  Hip.h  Lop.h  MinMax.h  Respiration.cpp  Respiration.h  SkinConductance.cpp  SkinConductance.h  TemperatureSH.cpp  TemperatureSH.h  Threshold.h  Timers.cpp  Timers.h  Timing.cpp  Timing.h  exampleRespiration.ino  utils.cpp  utils.h
test/: Test_resp.cpp  main.cpp
